IGNITE-20361 fix tests