@@ -22,7 +22,6 @@ import static org.apache.ignite.internal.catalog.commands.CatalogUtils.fromParam
 import static org.apache.ignite.internal.util.Constants.DUMMY_STORAGE_PROFILE;
 import static org.apache.ignite.sql.ColumnType.INT32;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Consumer;
@@ -50,7 +49,8 @@ abstract class AbstractCommandValidationTest extends BaseIgniteAbstractTest {
     static final String ZONE_NAME = "Default";
 
     private static final CatalogZoneDescriptor DEFAULT_ZONE = new CatalogZoneDescriptor(
-            0, ZONE_NAME, 1, -1, -1, -1, -1, "", null, fromParams(Collections.emptyList())
+            0, ZONE_NAME, 1, -1, -1, -1, -1, "", null,
+            fromParams(List.of(StorageProfileParams.builder().storageProfile(DUMMY_STORAGE_PROFILE).build()))
     );
 
     static Stream<Arguments> nullAndBlankStrings() {
@@ -80,7 +80,7 @@ abstract class AbstractCommandValidationTest extends BaseIgniteAbstractTest {
 
         tableDef.accept(builder);
 
-        return catalog(builder.build());
+        return catalog(builder.storageProfile(DUMMY_STORAGE_PROFILE).build());
     }
 
     static Catalog catalogWithZone(String name) {
